fix error and add function login
