# router/router.js
@@ -15,10 +15,15 @@ const insert_interface=require('../controllers/insertControoler.js').insertContr
 const add_premission=require('../controllers/insertControoler.js').insertController.add_premission;
 const insert_list_by_tablename=require('../controllers/insertControoler.js').insertController.insert_list_by_tablename;
 const check_con = require('../controllers/checkController.js').check_con;
+const login = require('../controllers/checkController.js').check_con.login;
 
 // #swagger.tags = ['User']
 // #swagger.parameters['body'] = { in: 'body', required: true, schema: { name: 'string', password: 'string', full_name: 'string', user_type: 'string' } }
 router.post('/create_user',create_user);
+
+// #swagger.tags = ['Auth']
+// #swagger.parameters['body'] = { in: 'body', required: true, schema: { user_name: 'string', password: 'string' } }
+router.post('/login',login);
 
 router.use(check_con.authentication);
 
